# knowledge_core

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  LICENSE  MANIFEST.in  README-debian.md  README-pypi.md  README-pypi.rst  README.md  package.xml  setup.cfg  setup.py
config/: 00-default.yaml  00-defaults.yaml  knowledge_core
doc/: api.md  reasoning.md
examples/: kb_events_ros.py
launch/: knowledge_core.launch  knowledge_core.launch.py
module/: knowledge_core  knowledge_core_module.yaml
pages/: README.md  index.html  kb_explorer.ts  package-lock.json  package.json  tsconfig.json
pages/static/: kb_explorer.min.js  kb_explorer.min.js.map
share/ontologies/: oro.owl
src/knowledge_core/: ansistrm.py  exceptions.py  helpers.py  kb.py  knowledge_core_ros.py
src/knowledge_core/api/: __init__.py
src/minimalkb/: helpers.py  kb.py
src/minimalkb/backends/: __init__.py  owlready2.py  rdflib_backend.py  sqlite.py  sqlite_queries.py
src/minimalkb/services/: simple_rdfs_reasoner.py
srv/: About.srv  Event.srv  Lookup.srv  Manage.srv  Query.srv  Revise.srv  Sparql.srv
test/: stress_test.py  test.py  test_embedded.py  test_pythonic_api_ros.py  test_pythonic_api_ros.test  test_reasoner.py  test_ros.py  test_ros.test  test_ros_events.py  test_ros_events.test
testing/: test.py  test_reasoner.py
tests/: _test_pythonic_api_ros.py  _test_ros.py  _test_ros_events.py
