<?xml version="1.0"?>
<package format="3">
  <name>knowledge_core</name>
  <version>2.5.5</version>
  <description>The KnowledgeCore knowledge base, including its service-based ROS API</description>

  <maintainer email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</maintainer>

  <license>BSD</license>
  <author email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>rostest</build_depend>
  <depend>std_msgs</depend>
  <depend>python3-rdflib</depend>

  <export>
  </export>
</package>
