<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>knowledge_core</name>
  <version>3.2.6</version>
  <description>The KnowledgeCore knowledge base, including its service-based ROS API</description>
  <maintainer email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</maintainer>
  <author email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</author>
  <url>https://github.com/severin-lemaignan/knowledge_core</url>
  <license>Apache-2.0</license>

  <depend>ament_index_python</depend>
  <depend>rclpy</depend>
  <depend>diagnostic_msgs</depend>
  <depend>std_msgs</depend>
  <depend>kb_msgs</depend>

  <depend>python3-rdflib</depend>
  <depend>python3-reasonable</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
